fix coinModal not showing up when user has no coins on watchlist

--- a/tracker/src/components/Footer.scss
+++ b/tracker/src/components/Footer.scss
@@ -2,7 +2,7 @@ footer {
   display: flex;
   align-items: center;
   height: 3em;
-  background-color: rgb(111, 209, 102);
+  background-color: rgb(241, 253, 255);     
   color: black;
   padding: 1em;
   position: relative; 
