--- a/tracker/src/components/Form.scss
+++ b/tracker/src/components/Form.scss
@@ -10,7 +10,7 @@
   margin-bottom: 200px;
   display: flex;
   flex-direction: column;
-  background: rgb(244, 244, 244);                             
+  background: rgb(241, 253, 255);                             
   padding: 25px 0px 25px 50px;
   border-radius: 15px;
   border: solid 1px black;
